fixed routing and horizontal scroll - when you run the project it willredirect you to localhost:3000/rine-store, be sure to change the url to localhost:3000/. I also commented 'bardas' where i made changes

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   margin:0;
   padding: 0;
   box-sizing: border-box;
-  scroll-direction: horizontal;
+  /* bardas */
+  overflow-x: hidden;
 }
 
 li {
